--- a/src/main/resources/org/example/philips_hue/hello-view.fxml
+++ b/src/main/resources/org/example/philips_hue/hello-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
@@ -53,7 +54,10 @@
                                         <Font size="20.0" />
                                     </font>
                                 </Text>
-                                <Button fx:id="botonOnOffTemperatura" layoutX="132.0" layoutY="461.0" mnemonicParsing="false" onAction="#initialize" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 70; -fx-background-image: url('OFF.png'); -fx-background-size: cover; -fx-background-position: center;" />
+                                <Button fx:id="botonOnOffTemperatura" layoutX="132.0" layoutY="461.0" mnemonicParsing="false" onAction="#initialize" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 70; -fx-background-image: url('OFF.png'); -fx-background-size: cover; -fx-background-position: center;">
+                           <effect>
+                              <DropShadow offsetX="3.0" offsetY="3.0" />
+                           </effect></Button>
                             </children>
                         </AnchorPane>
                     </content>
@@ -129,10 +133,28 @@
                                        <effect>
                                           <DropShadow offsetX="3.0" offsetY="3.0" />
                                        </effect></Button>
-                                                <Text layoutX="79.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exterior" />
-                                                <Text layoutX="79.0" layoutY="373.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dormitorio" wrappingWidth="62.13671875" />
-                                                <Text layoutX="72.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cocina" wrappingWidth="54.13671875" />
-                                                <Text layoutX="69.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Comedor" wrappingWidth="81.13671875" />
+                                                <Text layoutX="68.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exterior">
+                                       <font>
+                                          <Font name="Arial" size="25.0" />
+                                       </font></Text>
+                                                <Text layoutX="68.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dormitorio" wrappingWidth="134.13671875">
+                                       <font>
+                                          <Font name="Arial" size="25.0" />
+                                       </font></Text>
+                                                <Text layoutX="68.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cocina" wrappingWidth="101.13671875">
+                                       <font>
+                                          <Font name="Arial" size="25.0" />
+                                       </font></Text>
+                                                <Text fill="WHITE" layoutX="68.0" layoutY="61.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Comedor" wrappingWidth="117.13671875">
+                                       <font>
+                                          <Font name="Arial" size="25.0" />
+                                       </font>
+                                       <effect>
+                                          <DropShadow height="10.0" offsetX="3.0" offsetY="3.0" radius="4.5" width="10.0" />
+                                       </effect>
+                                       <cursor>
+                                          <Cursor fx:constant="DEFAULT" />
+                                       </cursor></Text>
                                             </children>
                                         </AnchorPane>
                                     </content>
