--- a/src/main/resources/org/example/philips_hue/hello-view.fxml
+++ b/src/main/resources/org/example/philips_hue/hello-view.fxml
@@ -18,7 +18,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="795.0" prefWidth="382.0" style="-fx-background-radius: 60;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.philips_hue.HelloController">
     <children>
-        <Pane prefHeight="795.0" prefWidth="382.0" style="-fx-background-color: #4E2ABD; -fx-background-color: linear-gradient(        from 0% 100% to 100% 0%,  rgb(67,203,208),         rgb(73,255,228) 35%,         rgba(0, 212, 255, 1) 100%    ); -fx-background-radius: 60;" />
+        <Pane prefHeight="795.0" prefWidth="382.0" style="-fx-background-color: #404040; -fx-background-radius: 60;" />
         <ImageView fitHeight="800.0" fitWidth="391.0" layoutX="-8.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../Contorn_Iphone.png" />
@@ -64,7 +64,7 @@
                     <graphic>
                         <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../ICON-Aire.png" />
+                                <Image url="@../../../ICON-Aire_blanco.png" />
                             </image>
                             <effect>
                                 <DropShadow radius="19.75" width="60.0" />
@@ -92,7 +92,7 @@
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../Garaje.png" />
+                                <Image url="@../../../Garaje_blanco.png" />
                             </image>
                             <effect>
                                 <DropShadow height="50.25" radius="31.46" width="77.59" />
@@ -104,7 +104,7 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="635.0" prefWidth="363.0">
                             <children>
-                                <Pane layoutX="14.0" layoutY="8.0" prefHeight="597.0" prefWidth="335.0" style="-fx-background-color: #79D7BE; -fx-background-radius: 20;">
+                                <Pane layoutX="14.0" layoutY="8.0" prefHeight="597.0" prefWidth="335.0" style="-fx-background-color: #808080; -fx-background-radius: 20;">
                                     <effect>
                                         <DropShadow>
                                             <input>
@@ -165,7 +165,7 @@
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../LucesIcon.png" />
+                                <Image url="@../../../LucesIcon_blanco.png" />
                             </image>
                             <effect>
                                 <DropShadow height="67.12" radius="23.9525" width="30.69" />
@@ -177,28 +177,28 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="512.0" prefWidth="405.0">
                             <children>
-                                <Slider fx:id="tiempoMusica" layoutX="40.0" layoutY="405.0" prefHeight="54.0" prefWidth="283.0">
+                                <Slider fx:id="tiempoMusica" layoutX="40.0" layoutY="375.0" prefHeight="54.0" prefWidth="283.0">
                                     <effect>
                                         <DropShadow offsetX="3.0" offsetY="3.0" />
                                     </effect>
                                 </Slider>
-                                <Button fx:id="botonPlayPause" layoutX="143.0" layoutY="472.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="70.0" style="-fx-background-radius: 150; -fx-background-image: url('pause.png'); -fx-background-size: cover; -fx-background-position: center;">
+                                <Button fx:id="botonPlayPause" layoutX="143.0" layoutY="442.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="70.0" style="-fx-background-radius: 150; -fx-background-image: url('play.png'); -fx-background-size: cover; -fx-background-position: center;">
                                     <effect>
                                         <DropShadow offsetX="3.0" offsetY="3.0" />
                                     </effect>
                                 </Button>
-                                <Button layoutX="40.0" layoutY="472.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="70.0" style="-fx-background-radius: 15; -fx-background-image: url('previus.png'); -fx-background-size: cover; -fx-background-position: center;">
+                                <Button layoutX="40.0" layoutY="442.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="70.0" style="-fx-background-radius: 15; -fx-background-image: url('previus.png'); -fx-background-size: cover; -fx-background-position: center;">
                                     <effect>
                                         <DropShadow offsetX="3.0" offsetY="3.0" />
                                     </effect>
                                 </Button>
-                                <Button layoutX="253.0" layoutY="472.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="70.0" style="-fx-background-radius: 15; -fx-background-image: url('next.png'); -fx-background-size: cover; -fx-background-position: center;">
+                                <Button layoutX="253.0" layoutY="442.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="70.0" style="-fx-background-radius: 15; -fx-background-image: url('next.png'); -fx-background-size: cover; -fx-background-position: center;">
                                     <effect>
                                         <DropShadow offsetX="3.0" offsetY="3.0" />
                                     </effect>
                                 </Button>
 
-                                <ImageView fitHeight="260.0" fitWidth="316.0" layoutX="51.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
+                                <ImageView fitHeight="260.0" fitWidth="316.0" layoutX="51.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../../../BadBunny.png" />
                                     </image>
@@ -206,19 +206,23 @@
                                         <DropShadow height="20.0" offsetX="5.0" offsetY="5.0" radius="9.5" width="20.0" />
                                     </effect>
                                 </ImageView>
-                                <Text fx:id="textMusica" fill="WHITE" layoutX="169.0" layoutY="406.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-                                <Text fill="WHITE" layoutX="92.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Un verano sin ti">
+                                <Text fx:id="textMusica" fill="WHITE" layoutX="169.0" layoutY="376.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                                <Text fill="WHITE" layoutX="92.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Un verano sin ti">
                                     <font>
                                         <Font size="26.0" />
                                     </font>
                                 </Text>
+                        <Button fx:id="botonMusicaCocina" layoutX="97.0" layoutY="571.0" mnemonicParsing="false" onAction="#initialize" prefHeight="38.0" prefWidth="78.0" style="-fx-background-color: linear-gradient(to bottom, #287f83, #06779b, #066c9a);" text="Cocina" />
+                        <Button fx:id="botonMusicaComedor" layoutX="181.0" layoutY="571.0" mnemonicParsing="false" onAction="#initialize" prefHeight="38.0" prefWidth="78.0" style="-fx-background-color: linear-gradient(to bottom, #287f83, #06779b, #066c9a);" text="Comedor" />
+                        <Button fx:id="botonMusicaDormitorio" layoutX="266.0" layoutY="571.0" mnemonicParsing="false" onAction="#initialize" prefHeight="38.0" prefWidth="78.0" style="-fx-background-color: linear-gradient(to bottom, #287f83, #06779b, #066c9a);" text="Dormitorio" />
+                        <Button fx:id="botonMusicaBaño" layoutX="12.0" layoutY="571.0" mnemonicParsing="false" onAction="#initialize" prefHeight="38.0" prefWidth="78.0" style="-fx-background-color: linear-gradient(to bottom, #287f83, #06779b, #066c9a);" text="Baño" />
                             </children>
                         </AnchorPane>
                     </content>
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../MusicaIcon.png" />
+                                <Image url="@../../../MusicaIcon_blanco.png" />
                             </image>
                             <effect>
                                 <DropShadow height="45.0" radius="25.75" width="60.0" />
