--- a/src/main/resources/org/example/philips_hue/hello-view.fxml
+++ b/src/main/resources/org/example/philips_hue/hello-view.fxml
@@ -49,7 +49,7 @@
                                         <DropShadow offsetX="3.0" offsetY="3.0" />
                                     </effect>
                                 </Button>
-                                <Text fx:id="textTemperatura" fill="WHITE" layoutX="155.0" layoutY="36.0" onDragDetected="#initialize" strokeType="OUTSIDE" strokeWidth="0.0">
+                                <Text fx:id="textTemperatura" fill="WHITE" layoutX="155.0" layoutY="36.0" onDragDetected="#initialize" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D">
                                     <font>
                                         <Font size="20.0" />
                                     </font>
@@ -76,16 +76,37 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="627.0" prefWidth="363.0">
                             <children>
-                                <Button fx:id="botonSubirGaraje" layoutX="98.0" layoutY="52.0" mnemonicParsing="false" onAction="#initialize" prefHeight="170.0" prefWidth="170.0" style="-fx-background-radius: 20; -fx-background-image: url('candado_abierto.png'); -fx-background-size: cover; -fx-background-position: center;">
-                                    <effect>
-                                        <DropShadow offsetX="3.0" offsetY="3.0" />
-                                    </effect>
-                                </Button>
-                                <Button fx:id="botonBajarGaraje" layoutX="98.0" layoutY="339.0" mnemonicParsing="false" onAction="#initialize" prefHeight="170.0" prefWidth="170.0" style="-fx-background-radius: 20; -fx-background-image: url('candado_cerrado.png'); -fx-background-size: cover; -fx-background-position: center;">
-                                    <effect>
-                                        <DropShadow offsetX="3.0" offsetY="3.0" />
-                                    </effect>
-                                </Button>
+                        <Pane layoutX="28.0" layoutY="54.0" prefHeight="516.0" prefWidth="307.0" style="-fx-background-color: #808080; -fx-background-radius: 20;">
+                           <effect>
+                              <InnerShadow>
+                                 <input>
+                                    <DropShadow />
+                                 </input>
+                              </InnerShadow>
+                           </effect>
+                           <children>
+                              <Text fill="WHITE" layoutX="124.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D" text="Abrir">
+                                 <font>
+                                    <Font size="26.0" />
+                                 </font>
+                              </Text>
+                                      <Button fx:id="botonSubirGaraje" layoutX="69.0" layoutY="54.0" mnemonicParsing="false" onAction="#initialize" prefHeight="170.0" prefWidth="170.0" style="-fx-background-radius: 20; -fx-background-image: url('candado_abierto.png'); -fx-background-size: cover; -fx-background-position: center;">
+                                          <effect>
+                                              <DropShadow offsetX="3.0" offsetY="3.0" />
+                                          </effect>
+                                      </Button>
+                              <Text fill="WHITE" layoutX="116.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D" text="Cerrar">
+                                 <font>
+                                    <Font size="26.0" />
+                                 </font>
+                              </Text>
+                                      <Button fx:id="botonBajarGaraje" layoutX="69.0" layoutY="296.0" mnemonicParsing="false" onAction="#initialize" prefHeight="170.0" prefWidth="170.0" style="-fx-background-radius: 20; -fx-background-image: url('candado_cerrado.png'); -fx-background-size: cover; -fx-background-position: center;">
+                                          <effect>
+                                              <DropShadow offsetX="3.0" offsetY="3.0" />
+                                          </effect>
+                                      </Button>
+                           </children>
+                        </Pane>
                             </children>
                         </AnchorPane>
                     </content>
@@ -117,41 +138,38 @@
                                     <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="720.0" prefWidth="318.0" style="-fx-background-color: transparent;">
                                             <children>
-                                                <Button fx:id="botonSalon" layoutX="28.0" layoutY="15.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Salon.png'); -fx-background-size: 300 150; -fx-background-position: center;">
+                                                <Button fx:id="botonSalon" layoutX="28.0" layoutY="21.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Salon.png'); -fx-background-size: 300 150; -fx-background-position: center;">
                                        <effect>
                                           <DropShadow offsetX="3.0" offsetY="3.0" />
                                        </effect></Button>
-                                                <Button fx:id="botonDomitorio" layoutX="28.0" layoutY="342.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Exterior.png'); -fx-background-size: 300 150; -fx-background-position: center;">
+                                                <Button fx:id="botonDomitorio" layoutX="28.0" layoutY="336.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Exterior.png'); -fx-background-size: 300 150; -fx-background-position: center;">
                                        <effect>
                                           <DropShadow offsetX="3.0" offsetY="3.0" />
                                        </effect></Button>
-                                                <Button fx:id="botonCocina" layoutX="28.0" layoutY="171.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Cocina.png'); -fx-background-size: 300 150; -fx-background-position: center;">
+                                                <Button fx:id="botonCocina" layoutX="28.0" layoutY="177.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Cocina.png'); -fx-background-size: 300 150; -fx-background-position: center;">
                                        <effect>
                                           <DropShadow offsetX="3.0" offsetY="3.0" />
                                        </effect></Button>
-                                                <Button fx:id="botonExterior" layoutX="28.0" layoutY="503.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Dormitorio.png'); -fx-background-size: 300 150; -fx-background-position: center;">
+                                                <Button fx:id="botonExterior" layoutX="28.0" layoutY="494.0" mnemonicParsing="false" onAction="#initialize" prefHeight="150.0" prefWidth="300.0" style="-fx-background-radius: 70; -fx-background-image: url('Dormitorio.png'); -fx-background-size: 300 150; -fx-background-position: center;">
                                        <effect>
                                           <DropShadow offsetX="3.0" offsetY="3.0" />
                                        </effect></Button>
-                                                <Text layoutX="68.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exterior">
+                                                <Text fill="WHITE" layoutX="68.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D" text="Exterior">
                                        <font>
                                           <Font name="Arial" size="25.0" />
                                        </font></Text>
-                                                <Text layoutX="68.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dormitorio" wrappingWidth="134.13671875">
+                                                <Text fill="WHITE" layoutX="68.0" layoutY="541.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D" text="Dormitorio" wrappingWidth="134.13671875">
                                        <font>
                                           <Font name="Arial" size="25.0" />
                                        </font></Text>
-                                                <Text layoutX="68.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cocina" wrappingWidth="101.13671875">
+                                                <Text fill="WHITE" layoutX="64.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D" text="Cocina" wrappingWidth="101.13671875">
                                        <font>
                                           <Font name="Arial" size="25.0" />
                                        </font></Text>
-                                                <Text fill="WHITE" layoutX="68.0" layoutY="61.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Comedor" wrappingWidth="117.13671875">
+                                                <Text fill="WHITE" layoutX="68.0" layoutY="61.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D" text="Comedor" wrappingWidth="117.13671875">
                                        <font>
                                           <Font name="Arial" size="25.0" />
                                        </font>
-                                       <effect>
-                                          <DropShadow height="10.0" offsetX="3.0" offsetY="3.0" radius="4.5" width="10.0" />
-                                       </effect>
                                        <cursor>
                                           <Cursor fx:constant="DEFAULT" />
                                        </cursor></Text>
@@ -207,7 +225,7 @@
                                     </effect>
                                 </ImageView>
                                 <Text fx:id="textMusica" fill="WHITE" layoutX="169.0" layoutY="376.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-                                <Text fill="WHITE" layoutX="92.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Un verano sin ti">
+                                <Text fill="WHITE" layoutX="88.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="letra3D" text="Un verano sin ti">
                                     <font>
                                         <Font size="26.0" />
                                     </font>
@@ -239,5 +257,6 @@
                 </DropShadow>
             </effect>
         </TabPane>
+      <Text layoutX="-244.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
     </children>
 </Pane>
